--- a/source_files/makefile
+++ b/source_files/makefile
@@ -1,5 +1,5 @@
 CC=gcc
-#  -I. means search for libraries in the dir, in this case '.' 
+
 CFLAGS=  -Wall -I.
 LIBS =  libdaqhats.so.1.3.0.5 
 DEPS=scantofile.h utils.h daqhats_utils.h mcc172.h 
@@ -9,6 +9,8 @@ OBJS= scantofile.o utils.o
 
 scantofile: $(OBJS)
 	$(CC) -o scantofile $(OBJS) $(LIBS)
+	cp scantofile ../
+	rm scantofile
 
 clean:
 	\rm *.o
